fixed window blink after electron update, fixed scrollbar width when hidden. https://github.com/yakyak/yakyak/issues/147#issuecomment-202482347

--- a/src/ui/css/yakyak/applayout.less
+++ b/src/ui/css/yakyak/applayout.less
@@ -54,7 +54,7 @@
         > .list {
             flex: 1;
             overflow-x: hidden;
-            overflow-y: scroll;
+            overflow-y: auto;
         }
         > .lfoot {
             flex: none;
@@ -68,7 +68,7 @@
         > .main {
             flex: 1;
             overflow-x: hidden;
-            overflow-y: scroll;
+            overflow-y: auto;
             padding-bottom: 35px;
         }
         > .maininfo {
